# fastapi-base-project

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose-test.yml  docker-compose.yml
.github/workflows/: ci.yml
app/: Dockerfile  Dockerfile.test  config.py  exceptions.py  main.py  pyproject.toml  requirements.txt  routers.py
app/auth/: config.py  controllers.py  decoractor.py  exceptions.py  routers.py  schemas.py  services.py
app/core/: README.md  config.py  controllers.py  exceptions.py  internal_models.py  schemas.py  services.py
app/db/: base.py  config.py  engine.py  test_db.py
app/middlewares/: authentication.py
app/middlewares/v1/: authentication.py  exceptions.py  log.py
app/modules/v1/health/: routers.py
app/modules/v1/tasks/: controllers.py  internal_models.py  models.py  routers.py  schemas.py  services.py
app/users/: config.py  controllers.py  exceptions.py  internal_models.py  models.py  routers.py  schemas.py  services.py
app/utils/: calculator.py  converter.py  validator.py  value.py
tests/: config.py  conftest.py
tests/db/: crud_test.py  test_db.py
tests/users/: users_test.py  users_unit_test.py
