[project]
name = "fastapi-base-project"
version = "0.1.0"
description = "A FastAPI backend application"
authors = [{ name = "Ellyx13", email = "pltkiet@gmail.com" }]
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "fastapi-restful==0.6.0",
    "loguru==0.7.3",
    "typing-inspect==0.9.0",
    "pydantic==2.11.2",
    "pydantic-settings==2.8.1",
    "motor==3.7.0",
    "bcrypt==4.3.0",
    "python-jose==3.4.0",
    "python-dateutil==2.9.0.post0"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "httpx==0.28.1"
]

[build-system]
requires = ["uv"]
build-backend = "uv.backend"
